# poly.glid_security_workspace

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  SUMMARY.md  config.example.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  polyglid.db  repinfo.json  workspace.toml
.agents/: ARCHITECTURE_FLOW.md  COMMAND_REFERENCE.md  README.md
.agents/shared/: agent-startup.md  caveman.md  reference-map.md
.agents/shared/changes/: 2026-06-30-polyglid-context-and-flow.md  2026-07-11-durable-knowledge-rule-and-wpm-review.md  2026-07-11-token-efficient-communication-rule.md  2026-07-11-workspace-ai-and-project-management-plan.md  2026-07-11-wpm-all-rust-stack-options.md  2026-07-11-wpm-local-git-sync-architecture.md  2026-07-11-wpm-mvp-work-plan.md  2026-07-12-unified-platform-implementation-roadmap.md  2026-07-12-unified-wpm-ai-automation-architecture.md  2026-07-14-desktop-make-commands.md  2026-07-14-dioxus-ui-modularization.md  2026-07-14-legacy-ui-removal.md  README.md  (+8 more)
.github/workflows/: ci.yml  deploy-site.yml  release.yml  repo-sync.yml
.workspace/ai/: AI_ROADMAP.md  ARCHITECTURE_AI.md
.workspace/ai/rust/: Cargo.toml  README.md
.workspace/ai/rust/src/: main.rs
.workspace/ai/rust/src/cache/: mod.rs
.workspace/ai/rust/src/cli/: commands.rs
.workspace/ai/rust/src/core/: context.rs  engine.rs  mod.rs  models.rs
.workspace/ai/rust/src/features/: build_optimizer.rs  code_analysis.rs  config_generator.rs  dependency_advisor.rs  ingest.rs  mod.rs  release_planner.rs  security_analyzer.rs  template_engine.rs  test_generator.rs
.workspace/ai/rust/src/feedback/: mod.rs  tracker.rs
.workspace/ai/rust/src/pipelines/: manager.rs  mod.rs
.workspace/ai/rust/src/providers/: local.rs  mod.rs  openai.rs  traits.rs
.workspace/automation/: Makefile
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/src/tui/: app.rs  keys.rs  mod.rs  ui.rs
apps/desktop/: Cargo.toml  README.md  package-lock.json  package.json
apps/desktop/assets/: main.css  projects.css  shell.css  theme.css
apps/desktop/src/: App.tsx  backend.rs  lib.rs  main.rs  types.ts
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/backend/: shell_preferences.rs
apps/desktop/src/client/: error.rs  gateway.rs  local.rs  mod.rs  models.rs
apps/desktop/src/components/layout/: ActivityBar.tsx  EditorArea.tsx  SettingsModal.tsx  SideBar.tsx
apps/desktop/src/ui/: app.rs  bottom_panel.rs  commands.rs  components.rs  editor.rs  mod.rs  models.rs  overlays.rs  preview.rs  shell.rs  sidebar.rs  state.rs  top_bar.rs
apps/desktop/src/ui/features/: executions.rs  mod.rs  plugins.rs  projects.rs  reports.rs  scanner.rs  tracks.rs
apps/server/: Cargo.toml
apps/server/src/: auth.rs  main.rs  tests.rs
apps/web/: index.html  package.json
configs/env/: .env.dev  .env.production  .env.staging
configs/linting/: .eslintrc.js
crates/config/: Cargo.toml
crates/core/: Cargo.toml
crates/events/: Cargo.toml
crates/polyglid-cli/: Cargo.toml
crates/polyglid-cli/src/: main.rs
crates/polyglid-cli/src/tui/: app.rs  keys.rs  ui.rs
crates/polyglid-config/: Cargo.toml
crates/polyglid-core/: Cargo.toml
crates/polyglid-core/src/: execution.rs  lib.rs  plugin_manager.rs
crates/polyglid-core/src/execution/reports/: json.rs  mod.rs  sarif.rs
crates/polyglid-core/src/services/: mod.rs
crates/polyglid-core/src/store/: execution_store.rs  mod.rs  report_store.rs  schema.rs  workspace.rs
crates/polyglid-plugin-api/: Cargo.toml
crates/polyglid-runtime/: Cargo.toml
crates/polyglid-runtime/src/: lib.rs
crates/runtime/: Cargo.toml
docs/architecture/: CLIENT_ARCHITECTURE.md  CLI_TECH_DECISION.md  CODEBASE.md  DESKTOP_UI.md  PROJECT_FLOW.md  README.md  REPOSITORY_LAYOUT.md  SYSTEM.md
docs/development/: CI_DELIVERY.md  MVP_RUNBOOK.md  PACKAGING.md  STEP_BY_STEP_DEVELOPMENT_FLOW.md  WORKFLOW.md
docs/framework/: 01-mindset.md  02-planning.md  03-architecture.md  05-tech-selection.md  06-tooling.md  08-security.md  09-scaling.md  10-stack-maps.md
docs/planning/: DEVELOPMENT_TARGETS.md  MVP.md  ROADMAP.md
docs/plugin_foundation/: README.md
docs/production_stack/: README.md
docs/security/: SECURITY_MODEL.md
docs/technical_feature/: README.md
infrastructure/wpm/: init.sql
old/: .gitignore  Cargo.toml  WORKSPACE_GUIDE.md  nx.json  package.json
old/.agents/: README.md
old/crates/: project.json
old/scripts/: run-mvp.sh
plugins/recon-probe/: polyglid.toml
plugins/recon_probe/: Cargo.toml  polyglid.toml
projects/polyglid-config/: Cargo.toml
projects/polyglid-desktop/: Cargo.toml  README.md
projects/polyglid-desktop-legacy/: package-lock.json
projects/polyglid-desktop/assets/: main.css  shell.css  theme.css
projects/polyglid-desktop/src/: backend.rs  domain.rs  main.rs
projects/polyglid-desktop/src/ui/: app.rs  bottom_panel.rs  commands.rs  editor.rs  mod.rs  models.rs  overlays.rs  preview.rs  shell.rs  sidebar.rs  state.rs  top_bar.rs
projects/polyglid-desktop/src/ui/features/: automation.rs  mod.rs  plugins.rs  projects.rs  scanner.rs
projects/wpm/: Cargo.toml  README.md
scripts/ops/: README.md  detect-changes.sh  mvp-smoke.sh  polyglid-ops.mjs  sync-repo.mjs  test-detect-changes.sh  test-polyglid-ops.mjs
sdk/: CHANGELOG.md  Cargo.toml  README.md
sdk/plugin-template/: Cargo.toml
site/src/: main.rs
site/templates/: index.html
slices/apps/cli/: Cargo.toml
slices/apps/desktop/: Cargo.toml
slices/apps/desktop/src/ui/: components.rs  editor.rs  overlays.rs  preview.rs  shell.rs  sidebar.rs  state.rs
slices/apps/desktop/src/ui/features/: agents.rs  scanner.rs
slices/apps/server/: Cargo.toml
slices/configs/config/: Cargo.toml
slices/site/: Cargo.toml
slices/site/src/: main.rs
slices/site/templates/: index.html
tools/ai/: AI_ROADMAP.md  ARCHITECTURE_AI.md
tools/automation/: Makefile  README.md
wit/: polyglid.wit
workspace/: .gitignore
workspace/projects/rust/crates/polyglid-runtime/: Cargo.toml
workspace/projects/rust/crates/polyglid-runtime/src/: lib.rs
(+261 files in other folders)
