[workspace]
members = [
  "projects/polyglid-cli",
  "projects/polyglid-config",
  "projects/polyglid-core",
  "projects/polyglid-events",
  "projects/polyglid-plugin-api",
  "projects/polyglid-runtime",
  "projects/recon-probe",
  "projects/polyglid-desktop",
  "projects/polyglid-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
