[workspace]
members = [
  "slices/apps/cli",
  "slices/apps/desktop",
  "slices/apps/server",
  "slices/configs/config",
  "slices/contracts/events",
  "slices/contracts/plugin-api",
  "slices/engine/core",
  "slices/engine/runtime",
  "slices/plugins/recon-probe",
  "slices/site",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
