[workspace]
members = [
  "apps/cli",
  "apps/desktop",
  "apps/server",
  "crates/config",
  "crates/events",
  "crates/plugin-api",
  "crates/core",
  "crates/runtime",
  "plugins/recon-probe",
  "site",
]
exclude = ["sdk"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.10.0"

[workspace.lints.rust]
unsafe_code = "forbid"
