[package]
name = "polyglid-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local-first workspace project manager and execution control plane"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
polyglid-core = { path = "../../crates/core" }
polyglid-events = { path = "../../crates/events" }
polyglid-config = { path = "../../crates/config" }
polyglid-plugin-api = { path = "../../crates/plugin-api" }
polyglid-runtime = { path = "../../crates/runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
thiserror = "2"
tokio = { version = "1", features = ["rt"] }
uuid = { version = "1", features = ["v7", "serde"] }

[[bin]]
name = "polyglid-desktop"
path = "src/main.rs"
test = false

[lints.rust]
unsafe_code = "forbid"
