[package]
name = "polyglid-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
polyglid-config = { path = "../../crates/config" }
polyglid-core = { path = "../../crates/core" }
polyglid-events = { path = "../../crates/events" }
polyglid-plugin-api = { path = "../../crates/plugin-api" }
polyglid-runtime = { path = "../../crates/runtime" }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
utoipa = { version = "4.0", features = ["axum_extras"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
futures-util = "0.3"
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "polyglid-server"
path = "src/main.rs"
