[package]
name = "polyglid-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
polyglid-config = { path = "../polyglid-config" }
polyglid-core = { path = "../polyglid-core" }
polyglid-events = { path = "../polyglid-events" }
polyglid-plugin-api = { path = "../polyglid-plugin-api" }
polyglid-runtime = { path = "../polyglid-runtime" }
wasi-preview1-component-adapter-provider = "46.0.1"
wit-component = "0.252.0"

[[bin]]
name = "polyglid"
path = "src/main.rs"
