[package]
name = "polyglid-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Local-first workspace project manager and execution control plane"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
polyglid-core = { path = "../polyglid-core" }
polyglid-events = { path = "../polyglid-events" }
polyglid-config = { path = "../polyglid-config" }
polyglid-plugin-api = { path = "../polyglid-plugin-api" }
polyglid-runtime = { path = "../polyglid-runtime" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt"] }
uuid = { version = "1", features = ["v7", "serde"] }

[[bin]]
name = "polyglid-desktop"
path = "src/main.rs"
test = false

[lints.rust]
unsafe_code = "forbid"
