[package]
name = "polyglid-ai"
version = "1.0.0"
edition = "2021"
description = "AI Engine for PolyGlid Workspace"
authors = ["PolyGlid Team"]

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

# AI & ML
reqwest = { version = "0.11", features = ["json", "stream"] }
async-openai = { git = "https://github.com/64bit/async-openai" }
candle-core = { version = "0.3", optional = true }  # Local inference
candle-transformers = { version = "0.3", optional = true }
tokenizers = "0.15"
onnxruntime = { version = "0.0.14", optional = true }

# File & Path
walkdir = "2.4"
glob = "0.3"
ignore = "0.4"
notify = "6.1"

# Git & VCS
git2 = "0.18"

# Parallel
rayon = { version = "1.8", optional = true }
dashmap = "5.5"

# Caching
moka = { version = "0.12", features = ["sync"] }
lru = "0.12"
bincode = "1.3"

# CLI
clap = { version = "4.4", features = ["derive", "color"] }
colored = "2.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
regex = "1.10"
futures = "0.3"

# WASM (for plugin support)
wasmtime = "14.0"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[features]
default = ["openai"]
openai = []
local = ["candle-core", "candle-transformers"]
local-onnx = ["onnxruntime"]
fast = ["rayon"]

[[bin]]
name = "polyglid-ai"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[workspace]
# Independent workspace to prevent rand version conflicts with the parent workspace

