[package]
name = "polyglid-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Local-first workspace project manager and execution control plane"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
polyglid-core = { path = "../../engine/core" }
polyglid-events = { path = "../../contracts/events" }
polyglid-config = { path = "../../configs/config" }
polyglid-plugin-api = { path = "../../contracts/plugin-api" }
polyglid-runtime = { path = "../../engine/runtime" }
serde = { version = "1", features = ["derive"] }
rfd = "0.15"
thiserror = "2"
tokio = { version = "1", features = ["rt"] }
uuid = { version = "1", features = ["v7", "serde"] }

[[bin]]
name = "polyglid-desktop"
path = "src/main.rs"
test = false

[lints.rust]
unsafe_code = "forbid"
