[package]
name = "polyglid-config"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
polyglid-plugin-api = { path = "../../contracts/plugin-api" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
semver = { version = "1.0", features = ["serde"] }
serde_json = "1"

[lib]
path = "src/lib.rs"
